# termlike

./: .gitignore  CMakeLists.txt  README.md
assets/util/embed/: CMakeLists.txt
assets/util/embed/src/: main.c
example/: bounce.c  cp437.c  cursor.c  empty.c  golf.c  hello.c  layering.c  logo.c  perf.c  transform.c
include/termlike/: animate.h  bounds.h  color.h  config.h  input.h  layer.h  location.h  position.h  termlike.h  transform.h
src/: animate.c  bounds.c  buffer.c  buffer.h  color.c  command.c  command.h  config.c  cursor.c  cursor.h  internal.h  keys.h  layer.c  location.c  position.c  state.h  termlike.c  transform.c  window.c  window.h
src/graphics/: graphics.h  loader.c  loader.h  renderer.h  viewport.c  viewport.h
src/graphics/opengl/: glyph_renderer.c  glyph_renderer.h  graphics.c  renderable.h  renderer.c  spritebatch.c  spritebatch.h
src/include/termlike/graphics/: renderer.h
src/include/termlike/input/: state.h
src/include/termlike/platform/: profiler.h  window.h
src/include/termlike/resources/: cp437.h  spritefont.8x8.h
src/platform/: profiler.h  timer.h  window.h
src/platform/glfw/: profiler.c  timer.c  window.c
src/resources/: cp437.h  spritefont.8x8.h
test/: layering.c  perf.c  transform.c
